@@ -1,5 +1,5 @@
 name    = ELF-Extract-Sections
-version = 0.0103
+version = 0.0104
 author  = Kent Fredric <kentnl@cpan.org>
 license = Perl_5
 copyright_holder = Kent Fredric
